<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_cached_black_48dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_theme"
        android:orderInCategory="2"
        android:title="@string/action_switch_theme"
        android:icon="@drawable/ic_wb_sunny_black_48dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="3"
        android:title="@string/action_login"
        android:icon="@drawable/ic_account_circle_black_48dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="4"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_48dp"
        app:showAsAction="never" />
</menu>
