<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!-- 防止默认焦点为edittext -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <!-- 登录框 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dp" >


        <!-- 用户名 input -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/login_label_username"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <!-- 密码 input -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_below="@id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.maksim88.passwordedittext.PasswordEditText
                android:id="@+id/password_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_label_password"
                android:longClickable="false"/>
        </android.support.design.widget.TextInputLayout>

        <!-- 登录 button -->
        <CheckBox
            android:id = "@+id/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label_autologin"
            android:layout_alignBaseline="@+id/signin_button"
            android:layout_below="@id/input_layout_password"
            android:checked="true"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/input_layout_password"
            android:layout_below="@id/input_layout_password"
            android:layout_marginTop="10dp"
            android:text="@string/login_label_signin" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#888"
            android:textColorLink="@color/link_color" />

        <TextView
            android:id="@+id/asm_help_link"
            android:layout_below="@id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/login_asm_help"
            android:textColor="#888"
            android:textColorLink="@color/link_color" />

        <ImageView
            android:id="@+id/smth_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/logo_footer" />
    </RelativeLayout>

    <ZoomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zoomButton"/>

</LinearLayout>