<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView android:id="@+id/recyclerview_mail_contents"
                                            android:name="com.zfdang.zsmth_android.MailFragment"
                                            xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_above="@+id/mail_bottom_buttons"
                                            android:layout_marginLeft="0dp"
                                            android:layout_marginRight="0dp"
                                            app:layoutManager="LinearLayoutManager"
                                            tools:context=".MailListFragment"
                                            tools:listitem="@layout/mail_item"/>

    <LinearLayout
        android:id="@+id/mail_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/Color_Navy"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/mail_button_inbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#333E4B"
            android:gravity="center|right"
            android:text="@string/mail_button_inbox_label"
            android:textColor="@color/blue_text_night"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/mail_button_outbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#333E4B"
            android:gravity="center"
            android:text="@string/mail_button_outbox_label"
            android:textColor="@color/status_text_night"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/mail_button_trashbox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#333E4B"
            android:gravity="left|center"
            android:text="@string/mail_button_trashbox_label"
            android:textColor="@color/status_text_night"
            android:textSize="12sp"
            />

    </LinearLayout>
</RelativeLayout>